Update templates and add link

--- a/public/0_tutorial/14_google.html
+++ b/public/0_tutorial/14_google.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <div class="ui main text container">
-  <h1 class="ui header"><a href="/index.html">Main</a> - google</h1>
+  <h1 class="ui header"><a href="{{BASE_URL}}">Main</a> - google</h1>
   <p>Правильно искать информацию в сети – важно. Подберёшь неправильный запрос – не найдёшь нужной ссылки.
 Иногда приходится делать много попыток, чтобы найти то, что надо. Тратишь полчаса на поиск решения проблемы,
 а какой-нибудь Вася найдёт то же, но за один запрос.</p>
