--- a/public/0_tutorial/29_english.html
+++ b/public/0_tutorial/29_english.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <div class="ui main text container">
-  <h1 class="ui header"><a href="/index.html">Main</a> - english</h1>
+  <h1 class="ui header"><a href="{{BASE_URL}}">Main</a> - english</h1>
   <p>Без знания английского ты не готов работать программистом.</p>
 
 <p>Английский нужен для всего: написания кода, чтения кода, чтения документации,
