--- a/public/0_tutorial/7_codenvy.html
+++ b/public/0_tutorial/7_codenvy.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <div class="ui main text container">
-  <h1 class="ui header"><a href="/index.html">Main</a> - codenvy</h1>
+  <h1 class="ui header"><a href="{{BASE_URL}}">Main</a> - codenvy</h1>
   <p>Кодэнви – это всё, что нужно для разработки ПО без лишней головной боли.</p>
 
 <p>Он позволяет создавать "рабочие места". Это, фактически, удалённый компьютер с прямым доступом к нему.
