--- a/public/0_tutorial/8_cli.html
+++ b/public/0_tutorial/8_cli.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <div class="ui main text container">
-  <h1 class="ui header"><a href="/index.html">Main</a> - cli</h1>
+  <h1 class="ui header"><a href="{{BASE_URL}}">Main</a> - cli</h1>
   <p>Консоль – основной способ взаимодействия разработчика с системой. С ней надо уметь взаимодействовать
 не хуже, чем с графическим интерфейсом.</p>
 
