--- a/public/0_tutorial/9_git.html
+++ b/public/0_tutorial/9_git.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <div class="ui main text container">
-  <h1 class="ui header"><a href="/index.html">Main</a> - git</h1>
+  <h1 class="ui header"><a href="{{BASE_URL}}">Main</a> - git</h1>
   <p>Гит – штука для управления кодом. Вместо чтения рекомендую начать с <a href="https://try.github.io">туториала на Гитхабе</a> (en).
 Он займёт 15 минут и даст представление о том, что это за зверь и как им пользоваться.</p>
 
