--- a/public/1_python_basics/10_pep8.html
+++ b/public/1_python_basics/10_pep8.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <div class="ui main text container">
-  <h1 class="ui header"><a href="/index.html">Main</a> - pep8</h1>
+  <h1 class="ui header"><a href="{{BASE_URL}}">Main</a> - pep8</h1>
   <p>PEP8 – это стайлгайд написания кода на Питоне. Он является <em>частью</em> Питона. Его все соблюдают.</p>
 
 <p>Он отвечает на вопросы в таком духе,</p>
