--- a/public/1_python_basics/18_comments.html
+++ b/public/1_python_basics/18_comments.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <div class="ui main text container">
-  <h1 class="ui header"><a href="/index.html">Main</a> - comments</h1>
+  <h1 class="ui header"><a href="{{BASE_URL}}">Main</a> - comments</h1>
   <h2>Какие бывают</h2>
 
 <h3>Обычные комментарии</h3>
