--- a/public/1_python_basics/1_intro.html
+++ b/public/1_python_basics/1_intro.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <div class="ui main text container">
-  <h1 class="ui header"><a href="/index.html">Main</a> - intro</h1>
+  <h1 class="ui header"><a href="{{BASE_URL}}">Main</a> - intro</h1>
   <h3>Языки программирования</h3>
 
 <p>Есть анлийский язык. На нём общаются люди. А ещё – на немецком, филиппинском, испанском, греческом и прорве других.</p>
