--- a/public/1_python_basics/2_base_types.html
+++ b/public/1_python_basics/2_base_types.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <div class="ui main text container">
-  <h1 class="ui header"><a href="/index.html">Main</a> - base types</h1>
+  <h1 class="ui header"><a href="{{BASE_URL}}">Main</a> - base types</h1>
   <h3>О типах данных по-быстрому</h3>
 
 <p>Цель этого подмодуля – по-быстрому рассказать о основных типах данных и дать их потрогать.
