--- a/public/1_python_basics/3_base_constructions.html
+++ b/public/1_python_basics/3_base_constructions.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <div class="ui main text container">
-  <h1 class="ui header"><a href="/index.html">Main</a> - base constructions</h1>
+  <h1 class="ui header"><a href="{{BASE_URL}}">Main</a> - base constructions</h1>
   <h3>Коротко о главных управляющих конструкциях</h3>
 
 <p>Сейчас мы совсем реактивно пройдёмся по самым основным управляющим конструкциям. Гет реди.</p>
