--- a/public/1_python_basics/4_types.html
+++ b/public/1_python_basics/4_types.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <div class="ui main text container">
-  <h1 class="ui header"><a href="/index.html">Main</a> - types</h1>
+  <h1 class="ui header"><a href="{{BASE_URL}}">Main</a> - types</h1>
   <h3>Числа</h3>
 
 <p>В самом Питоне есть целые, вещественные, и комплексные числа. В стандартной библиотеке есть ещё рациональные и
