--- a/public/1_python_basics/5_modules.html
+++ b/public/1_python_basics/5_modules.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <div class="ui main text container">
-  <h1 class="ui header"><a href="/index.html">Main</a> - modules</h1>
+  <h1 class="ui header"><a href="{{BASE_URL}}">Main</a> - modules</h1>
   <h3>Что это такое</h3>
 
 <p>Модуль – кусок кода, который можно использовать в другом коде. В самом простом случае это файл.
