--- a/public/1_python_basics/6_tips_and_tricks.html
+++ b/public/1_python_basics/6_tips_and_tricks.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <div class="ui main text container">
-  <h1 class="ui header"><a href="/index.html">Main</a> - tips and tricks</h1>
+  <h1 class="ui header"><a href="{{BASE_URL}}">Main</a> - tips and tricks</h1>
   <p>Тут – разные мелочи, на которых обычно спотыкаются новички в Питоне. Шагай свободно.</p>
 
 <h3>Итерируй сразу по коллекции, а не по индексам</h3>
