--- a/public/2_html/html_injection.html
+++ b/public/2_html/html_injection.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <div class="ui main text container">
-  <h1 class="ui header"><a href="/index.html">Main</a> - html injection</h1>
+  <h1 class="ui header"><a href="{{BASE_URL}}">Main</a> - html injection</h1>
   <h1>HTML Injection with <code>body</code> Tag Closing</h1>
 
 <p>Здесь будет статья о том почему важно экранировать user-generated контекст, как неосторожность приводит к взлому сайта роботами.</p>
