--- a/public/4_git/22_git_history.html
+++ b/public/4_git/22_git_history.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <div class="ui main text container">
-  <h1 class="ui header"><a href="/index.html">Main</a> - git history</h1>
+  <h1 class="ui header"><a href="{{BASE_URL}}">Main</a> - git history</h1>
   <p>История изменений в коде очень важна при работе в команде. По ней программисты ориентируются.</p>
 
 <p>Такие емкие комментарии как "исправлено", "обновлено", "сделано" не только бесполезны, но
