--- a/public/0_tutorial/27_devman.html
+++ b/public/0_tutorial/27_devman.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <div class="ui main text container">
-  <h1 class="ui header"><a href="/index.html">Main</a> - devman</h1>
+  <h1 class="ui header"><a href="{{BASE_URL}}">Main</a> - devman</h1>
   <p>Девман – сборник задач для обучения программированию и теории, необходимой для этого.</p>
 
 <p>У всех задач одни требования:</p>
