--- a/public/2_html/special _ symbol.html
+++ b/public/2_html/special _ symbol.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <div class="ui main text container">
-  <h1 class="ui header"><a href="/index.html">Main</a> - special &amp; symbol</h1>
+  <h1 class="ui header"><a href="{{BASE_URL}}">Main</a> - special &amp; symbol</h1>
   <h1>Специальные символы в HTML</h1>
 
 <p>TODO. Здесь будет большая статья про использование специальных символов в HTML. Например, про &gt; и &amp;. Также стоит затронуть необходимость экранирования текста при генерации HTML.</p>
