--- a/public/0_tutorial/27_devman.html
+++ b/public/0_tutorial/27_devman.html
@@ -8,7 +8,7 @@
   <title>devman</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css"/>
   <style>
-    h1 {
+    h1.ui.header {
       text-transform: uppercase;
     }
   </style>
