--- a/public/1_python_basics/2_base_types.html
+++ b/public/1_python_basics/2_base_types.html
@@ -25,12 +25,11 @@
 
 <p>Числа – и в Африке числа. С ними можно производить арифметические действия. Всё просто:</p>
 
-<pre><code>:::python
-2 + 2  # 4
-3 + 2.5  # 5.5
-6 / 2  # 3
-2 ** 3  # 8
-</code></pre>
+<div class="codehilite"><pre><span></span><code><span class="mi">2</span> <span class="o">+</span> <span class="mi">2</span>  <span class="c1"># 4</span>
+<span class="mi">3</span> <span class="o">+</span> <span class="mf">2.5</span>  <span class="c1"># 5.5</span>
+<span class="mi">6</span> <span class="o">/</span> <span class="mi">2</span>  <span class="c1"># 3</span>
+<span class="mi">2</span> <span class="o">**</span> <span class="mi">3</span>  <span class="c1"># 8</span>
+</code></pre></div>
 
 <p>Решётка – это знак комментария в Питоне,
 а в этом туториале результат работы команды указан на той же строчке за комментарием.</p>
@@ -39,23 +38,21 @@
 
 <p>Помимо чисел в Питоне есть строки с богатым набором встроенных функций. С ними просто и удобно работать:</p>
 
-<pre><code>:::python
-'hello'  # строковая константа
-"hello"  # тип кавычек не имеет значения
-hello[1]  # 'e'
-'hello' + ' ' + 'world'  # 'hello world'
-'blah ' * 3  # 'blah blah blah '
-</code></pre>
+<div class="codehilite"><pre><span></span><code><span class="s1">&#39;hello&#39;</span>  <span class="c1"># строковая константа</span>
+<span class="s2">&quot;hello&quot;</span>  <span class="c1"># тип кавычек не имеет значения</span>
+<span class="n">hello</span><span class="p">[</span><span class="mi">1</span><span class="p">]</span>  <span class="c1"># &#39;e&#39;</span>
+<span class="s1">&#39;hello&#39;</span> <span class="o">+</span> <span class="s1">&#39; &#39;</span> <span class="o">+</span> <span class="s1">&#39;world&#39;</span>  <span class="c1"># &#39;hello world&#39;</span>
+<span class="s1">&#39;blah &#39;</span> <span class="o">*</span> <span class="mi">3</span>  <span class="c1"># &#39;blah blah blah &#39;</span>
+</code></pre></div>
 
 <p>У них много встроенных функций:</p>
 
-<pre><code>:::python
-'hello  '.strip()  # 'hello'
-'hello world'.upper()  # 'HELLO WORLD'
-len('hello')  # 5
-'wor' in 'hello world'  # True (входит ли "wor" в строку "hello world")
-'hello world'.startswith('hel')  # True (начинается ли  "hello world" c "hel")
-</code></pre>
+<div class="codehilite"><pre><span></span><code><span class="s1">&#39;hello  &#39;</span><span class="o">.</span><span class="n">strip</span><span class="p">()</span>  <span class="c1"># &#39;hello&#39;</span>
+<span class="s1">&#39;hello world&#39;</span><span class="o">.</span><span class="n">upper</span><span class="p">()</span>  <span class="c1"># &#39;HELLO WORLD&#39;</span>
+<span class="nb">len</span><span class="p">(</span><span class="s1">&#39;hello&#39;</span><span class="p">)</span>  <span class="c1"># 5</span>
+<span class="s1">&#39;wor&#39;</span> <span class="ow">in</span> <span class="s1">&#39;hello world&#39;</span>  <span class="c1"># True (входит ли &quot;wor&quot; в строку &quot;hello world&quot;)</span>
+<span class="s1">&#39;hello world&#39;</span><span class="o">.</span><span class="n">startswith</span><span class="p">(</span><span class="s1">&#39;hel&#39;</span><span class="p">)</span>  <span class="c1"># True (начинается ли  &quot;hello world&quot; c &quot;hel&quot;)</span>
+</code></pre></div>
 
 <p>Ещё можно превращать строку в список, список в строку,
 получать подстроку и по-разному форматировать значения, но об этом позже.</p>
@@ -65,24 +62,22 @@ len('hello')  # 5
 <p>Список – последовательность элементов. Ограничения на длину нет.
 Элементы могут быть разных типов, даже другими списками. Выглядит он так:</p>
 
-<pre><code>:::python
-[1, 2, 3]  # в квадратных скобках, элементы через запятую
-digits = [4, 5, 6]  # переменная, в которой живёт список
-digits[0]  # 4 (нумерация с нуля)
-digits[1] = 22  # теперь в списке digits на втором месте стоит 22
-digits.append(8)  # а теперь в конец добавилась восьмёрка
-</code></pre>
+<div class="codehilite"><pre><span></span><code><span class="p">[</span><span class="mi">1</span><span class="p">,</span> <span class="mi">2</span><span class="p">,</span> <span class="mi">3</span><span class="p">]</span>  <span class="c1"># в квадратных скобках, элементы через запятую</span>
+<span class="n">digits</span> <span class="o">=</span> <span class="p">[</span><span class="mi">4</span><span class="p">,</span> <span class="mi">5</span><span class="p">,</span> <span class="mi">6</span><span class="p">]</span>  <span class="c1"># переменная, в которой живёт список</span>
+<span class="n">digits</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span>  <span class="c1"># 4 (нумерация с нуля)</span>
+<span class="n">digits</span><span class="p">[</span><span class="mi">1</span><span class="p">]</span> <span class="o">=</span> <span class="mi">22</span>  <span class="c1"># теперь в списке digits на втором месте стоит 22</span>
+<span class="n">digits</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="mi">8</span><span class="p">)</span>  <span class="c1"># а теперь в конец добавилась восьмёрка</span>
+</code></pre></div>
 
 <p>Из списка надо часто получить подсписок: несколько первых элементов, последних, что-то из середины.
 Это называется срезами и позволяет делать много чего. Вот самые простые срезы:</p>
 
-<pre><code>:::python
-squares = [1, 4, 9, 16, 25, 36, 49]
-squares[1:3]  # [4, 9] (элементы со второго по третий)
-squares[:4]  # [1, 4, 9, 16] (элементы с начала до четвёртого)
-squares[4:]  # [25, 36, 49] (элементы с пятого до конца)
-squares[1:6:2]  # [4, 16, 36] (элементы со второго до шестого с шагом два)
-</code></pre>
+<div class="codehilite"><pre><span></span><code><span class="n">squares</span> <span class="o">=</span> <span class="p">[</span><span class="mi">1</span><span class="p">,</span> <span class="mi">4</span><span class="p">,</span> <span class="mi">9</span><span class="p">,</span> <span class="mi">16</span><span class="p">,</span> <span class="mi">25</span><span class="p">,</span> <span class="mi">36</span><span class="p">,</span> <span class="mi">49</span><span class="p">]</span>
+<span class="n">squares</span><span class="p">[</span><span class="mi">1</span><span class="p">:</span><span class="mi">3</span><span class="p">]</span>  <span class="c1"># [4, 9] (элементы со второго по третий)</span>
+<span class="n">squares</span><span class="p">[:</span><span class="mi">4</span><span class="p">]</span>  <span class="c1"># [1, 4, 9, 16] (элементы с начала до четвёртого)</span>
+<span class="n">squares</span><span class="p">[</span><span class="mi">4</span><span class="p">:]</span>  <span class="c1"># [25, 36, 49] (элементы с пятого до конца)</span>
+<span class="n">squares</span><span class="p">[</span><span class="mi">1</span><span class="p">:</span><span class="mi">6</span><span class="p">:</span><span class="mi">2</span><span class="p">]</span>  <span class="c1"># [4, 16, 36] (элементы со второго до шестого с шагом два)</span>
+</code></pre></div>
 
 </div>
 <hr/>
